dist/1.0/bin/sample/retrieveUnpackaged/objects/OrderDirection__c.object
<CustomObject>
    <fields>
        <fullName>Actiontype__c</fullName>
        <description>Action set by Product Configurator; based on this appropriate actions will be executed in external systems</description>
        <inlineHelpText>Action set by Product Configurator; based on this appropriate actions will be executed in external systems</inlineHelpText>
        <label>Actiontype</label>
        <picklist>
            <picklistValues>
                <fullName>create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_ID__c</fullName>
        <description>ID of Direction Disccount in Billing System</description>
        <inlineHelpText>ID of Direction Disccount in Billing System</inlineHelpText>
        <label>Billing ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_ID__c</fullName>
        <description>ID of direction created in CSR Database</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of direction created in CSR Database</inlineHelpText>
        <label>CSR ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if direction has already been created in Billing</description>
        <inlineHelpText>Indicates if direction has already been created in Billing</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <description>relation to Direction definition</description>
        <inlineHelpText>relation to Direction definition</inlineHelpText>
        <label>Direction</label>
        <referenceTo>Direction__c</referenceTo>
        <relationshipLabel>Order Directions</relationshipLabel>
        <relationshipName>Order_Directions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Percent of discount for given Direction</description>
        <inlineHelpText>Percent of discount for given Direction</inlineHelpText>
        <label>Discount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OrderTariff__c</fullName>
        <description>Relation to Tariff, that Direction Discount belongs to</description>
        <inlineHelpText>Relation to Tariff, that Direction Discount belongs to</inlineHelpText>
        <label>Order Tariff</label>
        <referenceTo>OrderTariff__c</referenceTo>
        <relationshipLabel>Order Directions</relationshipLabel>
        <relationshipName>Order_Directions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Value of discount for given Direction</description>
        <inlineHelpText>Value of discount for given Direction</inlineHelpText>
        <label>Price</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFDC_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ID assigned by Product Configurator used later to update Direction with any changes</description>
        <externalId>true</externalId>
        <inlineHelpText>ID assigned by Product Configurator used later to update Direction with any changes</inlineHelpText>
        <label>SFDC ID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <description>Date, when given discount should be activated</description>
        <inlineHelpText>Date, when given discount should be activated</inlineHelpText>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <description>Date, till when given discount is valid</description>
        <inlineHelpText>Date, till when given discount is valid</inlineHelpText>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Order Direction</label>
    <nameField>
        <label>Order Direction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Directions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>